RESOLVED FIXED 230330
Fix some WEBCORE_EXPORTS on FrameView
https://bugs.webkit.org/show_bug.cgi?id=230330
Summary Fix some WEBCORE_EXPORTS on FrameView
Simon Fraser (smfr)
Reported 2021-09-15 17:31:04 PDT
Fix some WEBCORE_EXPORTS on FrameView
Attachments
Patch (4.31 KB, patch)
2021-09-15 17:33 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2021-09-15 17:33:30 PDT
EWS
Comment 2 2021-09-16 11:12:20 PDT
Committed r282563 (241751@main): <https://commits.webkit.org/241751@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 438309 [details].
Radar WebKit Bug Importer
Comment 3 2021-09-16 11:13:38 PDT
Note You need to log in before you can comment on or make changes to this bug.