Fix some WEBCORE_EXPORTS on FrameView https://bugs.webkit.org/show_bug.cgi?id=230330

Reviewed by Wenson Hsieh.

scrollToPositionWithAnimation() and effectiveFrameFlattening() do not need to be exported.

Instead of exporting traverseForPaintInvalidation() which is never referenced outside of
WebCore, make the two functions that wrap it non-inline, and export the one used by
Internals. traverseForPaintInvalidation() can be private.

* page/FrameView.cpp:
(WebCore::FrameView::scrollToPositionWithAnimation):
(WebCore::FrameView::invalidateControlTints):
(WebCore::FrameView::invalidateImagesWithAsyncDecodes):
* page/FrameView.h:


Canonical link: https://commits.webkit.org/241751@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282563 268f45cc-cd09-0410-ab3c-d52691b4dbfc